
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-beta-2 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Layout can now be toggled between tabs (default) and portal panels via the setting 'manager_use_tabs'
- Nuked the Loading Box in MODExt
- Changed clearCache key shortcut to CTRL+U (CTRL+SHIFT+U for PC users)
- Fixed issue where folder resources couldnt be drag/dropped
- Added some key-events: CTRL+H for hiding accordion, CTRL+U for clearing cache, CTRL+N for Quick Create Resource (PC users will need to add SHIFT to all those calls)
- Fixed portal issues with Safari
- Added a few events to MODx. JS object, cleaned up code
- Added sanity checks to context/category create/update processors
- [#MODX-766] Added check to prevent settings starting with numbers
- Added ability to update plugin events and dynamically manage plugins associated with them by right-clicking on them in the Plugin Event grid
- Added 'beforeSubmit' listener to MODx.Window
- Adjusted TreeDrop code to allow for RTEs to utilize drag/drop features
- [#MODX-827] Fixed typo in resource container help string
- Added prevention fix to prevent dragging of non-elements/resources into content panes
- [#MODX-770] Fixed bug with creating Symlink
- Fixed issues with creating and editing a static resource
- Fixed bug with treedrop that set boolean values to string representations; changed to 1/0
- Fixed missing context menu item to remove new properties in a property set
- Added functionality for Element Tag Builder to use descriptions of properties
- [#MODX-817] Redid Clear Cache window to use MODx.Console
- Lexiconized missing "Copy to Clipboard" string
- Slight tweaks to MODx.Console to get messages to display final ending messages properly